--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>vue-webpack-simple</title>
+    <title>A Vue.js shopping cart</title>
+    <link rel="icon" type="image/png" href="/dist/assets/images/icons/favicon-32x32.png">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <script src="https://use.fontawesome.com/73882d76f5.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
