--- a/index.html
+++ b/index.html
@@ -1,11 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <title>A Vue.js shopping cart</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <script src="https://use.fontawesome.com/73882d76f5.js"></script>
+    <style>
+        #initLoading {
+            background: lightgray;
+            width: 64px;
+            height: 64px;
+            position: fixed;
+            top: calc(50% - 32px);
+            left: calc(50% - 32px);
+            border-radius: 100%;
+        }
+
+        @keyframes expandCircle {
+            0% {
+                width: 0;
+                height: 0;
+            }
+            100% {
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        #initLoading::before {
+            content: ' ';
+            background: rgba(128, 128, 128, 0.5);
+            width: 32px;
+            height: 32px;
+            position: fixed;
+            top: calc(50% - 32px);
+            left: calc(50% - 32px);
+            border-radius: 100%;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            animation: expandCircle 1s ease-in-out infinite;
+        }
+
+        body {
+            padding: 0;
+            padding-top: 10px;
+            margin: 0;
+            font-family: 'Roboto', sans-serif;
+        }
+
+        #header {
+            width: 100%;
+            height: 48px;
+            margin-bottom: 22px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            background: white;
+            padding: 0;
+            padding-left: 10px;
+            padding-right: 10px;
+            box-sizing: border-box;
+            z-index: 1;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.16), 0 2px 4px rgba(0, 0, 0, 0.23);
+        }
+
+        #content {
+            color: gray;
+            padding: 16px;
+            padding-top: 32px;
+            max-width: 1000px;
+            margin-top: 48px;
+            margin-left: auto;
+            margin-right: auto;
+            overflow: hidden;
+            min-height: 100vh;
+        }
+
+        #footer {
+            background: white;
+            padding: 16px;
+            margin: 0;
+            margin-top: 32px;
+            box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.16), 0 -2px 4px rgba(0, 0, 0, 0.23);
+        }
+        #footer a:hover, #footer a:link, #footer a:visited {
+            text-decoration: none;
+        }
+
+        .footer-wrapper {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            flex-wrap: wrap;
+        }
+        .footer-wrapper-left {
+            color: gray;
+            flex-grow: 2;
+            text-align: center;
+        }
+        .footer-wrapper-left * {
+            vertical-align: middle;
+        }
+        .footer-wrapper-right {
+            line-height: 1.5em;
+            color: gray;
+            flex-grow: 1;
+        }
+    </style>
+</head>
+
+<body>
+    <div id="initLoading"></div>
+    <script>
+        (function(){
+            var el = document.getElementById('initLoading')
+            var checkScriptLoaded = setInterval(function() {
+                if (window.APP_SCRIPT_LOADED) {
+                    clearInterval(checkScriptLoaded)
+                    el.parentElement.removeChild(el)
+                }
+            }, 50)
+        })()
+    </script>
+
+    <script async src="https://use.fontawesome.com/73882d76f5.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
     <script>
         var config = {
@@ -18,9 +139,60 @@
         };
         firebase.initializeApp(config);
     </script>
-</head>
-<body>
+
     <div id="app"></div>
     <script src="/dist/build.js"></script>
+
+    <div id="footer">
+        <div class="footer-wrapper">
+            <div class="footer-wrapper-left">
+                <span>Powered by </span>
+                <a href="https://firebase.google.com">
+                    <img src="https://firebase.google.com/_static/images/firebase/touchicon-180.png" width="64px">
+                </a>+
+                <a href="https://webpack.js.org">
+                    <img src="https://webpack.js.org/6bc5d8cf78d442a984e70195db059b69.svg" width="64px">
+                </a>+
+                <a href="https://vuejs.org">
+                    <img src="https://vuejs.org/images/logo.png" width="64px">
+                </a>+
+                <a href="https://lodash.com">
+                    <img src="https://s-media-cache-ak0.pinimg.com/originals/5c/a1/dc/5ca1dc984117b0bb5e647ffea7fe6b0d.png" width="64px">
+                </a>+
+                <a href="http://sass-lang.com">
+                    <img src="http://sass-lang.com/assets/img/logos/logo-b6e1ef6e.svg" width="64px">
+                </a>+
+                <a href="https://fontawesome.io">
+                    <img src="https://www.vectorlogo.zone/logos/font-awesome/font-awesome-card.png" height="64px">
+                </a>
+            </div>
+            <div class="footer-wrapper-right">
+                <h3>References</h3>
+                <a href="https://css-tricks.com">
+                    <small>CSSTricks</small>
+                </a><br>
+                <a href="https://www.w3schools.com">
+                    <small>W3Schools</small>
+                </a><br>
+                <a href="https://developer.mozilla.org">
+                    <small>Mozilla Develper Network</small>
+                </a><br>
+                <a href="https://codepen.io/sebj54/pen/oxluI">
+                    <small>Material design buttons (CSS-only)</small>
+                </a><br>
+                <a href="https://codepen.io/sdthornton/pen/wBZdXq">
+                    <small>Material Design Box Shadows</small>
+                </a>
+                <a href="https://codepen.io/sdthornton/pen/wBZdXq">
+                    <small>Material Design Box Shadows</small>
+                </a>
+                <h3>Resources</h3>
+                <small>
+                    <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+                </small>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
